feat(ai): implement autonomous 7-layer AI reasoning engine with briefing, planning, and reflection
Replace deterministic if/else agent loop (139 lines of conditional reasoning,
hashmap-based planning) with CareerAgentBrain — an LLM-powered intelligence
layer across all 7 layers: identity, episodic memory, reasoning, planning,
execution, reflection, and weekly review.

Backend:
- CareerAgentBrain: think() (structured JSON decisions), plan() (multi-day
  strategy with prioritized actions), reflect() (after-task analysis with
  lessons learned), weeklyReview() (7-day metrics, insights, recommendations),
  generateBriefing() (warm personalized daily report)
- AgentIdentity: user profile representation (skills, experience, preferences,
  career goals)
- AgentEpisode: episodic memory with context, outcome, and emotional valence
- AgentPlan: structured multi-day plan with strategy narrative + PlannedAction
  list (type, description, reasoning, priority, schedule, status)
- AgentReflection: after-task analysis (success/failure, lessons, new knowledge)
- WeeklyReview: 7-day self-evaluation with metrics, insights, recommendations,
  strategy adjustments
- DefaultAgentRuntime: loop refactored from observe/reason(if/else)/plan(hashmap)/
  execute/learn to observe/think(LLM)/plan(LLM)/execute+reflect/weeklyReview
- AgentController: new GET /briefing?userId= and GET /missions/{id}/status
  endpoints exposing full agent intelligence (briefing, plan, review, stats)

Frontend:
- New types: AgentBriefing, AgentMissionStatus, AIRecommendation, AgentActivity,
  MissionResponse, TaskResponse
- New API endpoints: agent.briefing, agent.missionStatus, agent.userMissions
- Dashboard redesigned as conversational AI daily report (zero fake data):
  live briefing, real mission stats, current plan, weekly review, real task
  activity, honest empty states everywhere
- Fixed double /api/v1 prefix in all agent API endpoint paths

Build: backend compiles clean, frontend 19/19 pages 0 errors.